file(GLOB_RECURSE MNN_EXPR_SRCS "${CMAKE_CURRENT_LIST_DIR}/*.cpp")
file(GLOB_RECURSE MNN_EXPR_SRCS_for_wasm "${CMAKE_CURRENT_LIST_DIR}/*.cpp")
list(REMOVE_ITEM MNN_EXPR_SRCS_for_wasm ${CMAKE_CURRENT_LIST_DIR}/Executor.cpp)
add_source(
    ${MNN_EXPR_SRCS}
    )
option(MNN_EXPR_ENABLE_PROFILER "Support profile Expr's op cost" OFF)
IF (MNN_EXPR_ENABLE_PROFILER)
    add_definitions(-DMNN_EXPR_ENABLE_PROFILER)
ENDIF()
IF(MNN_SEP_BUILD)
    if (MNN_BUILD_FOR_ANDROID_COMMAND)
        set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "../")
    endif()
    add_library(MNN_Express SHARED ${MNN_EXPR_SRCS})
    target_link_libraries(MNN_Express MNN)
ELSE()
    add_library(MNNExpress OBJECT ${MNN_EXPR_SRCS})
ENDIF()
